Revert merge 536deca6394a53beb64fe2d3f84d7fb87e305fe9

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -181,6 +181,8 @@ action.help-command.description=Displays the help topics
 action.help-command=Help Topics
 action.import-connections-from-DB-command=Import Connections from DB
 action.import-connections-from-file-command=Import Connections from file
+action.import-data-from-file-command=Import Data From File
+action.import-data-from-file-command.description=Import data into database from local files (*.csv, *.xlsx, ...)
 action.import-delimited-command=Import from Delimited File
 action.import-xml-command=Import from XML
 action.insert-row-command=Create a new table column after the current selection
@@ -514,6 +516,15 @@ preferences.restart-message=The settings will take effect after the application 
 # -----------------------------------------------------
 # Classes
 # -----------------------------------------------------
+AboutPanel.Title=About
+AboutPanel.Copyright=Copyright
+AboutPanel.System=System
+AboutPanel.Resources=Resources
+AboutPanel.License=License
+AboutPanel.Version=Version
+AboutPanel.Fork_of_execute_query=Fork of Execute Query
+AboutPanel.Error_loading_license_panel_text=Error loading license panel text
+AboutPanel.ViewLicense=View License
 AbstractCreateObjectPanel.SQL=SQL
 AbstractCreateObjectPanel.active=Active
 AbstractCreateObjectPanel.check=Check
@@ -726,6 +737,7 @@ BrowserTreePopupMenu.TRIGGER=trigger for table
 BrowserTreePopupMenu.USER=user
 BrowserTreePopupMenu.VIEW=view
 BrowserTreePopupMenu.addNewConnection=New Connection
+BrowserTreePopupMenu.active=Enable
 BrowserTreePopupMenu.connect=Connect
 BrowserTreePopupMenu.connectText=Connect Data Source {0}
 BrowserTreePopupMenu.copyName=Copy Name
@@ -749,13 +761,16 @@ BrowserTreePopupMenu.exportSQL=Export as SQL
 BrowserTreePopupMenu.exportXml=Export to XML File
 BrowserTreePopupMenu.importDelimited=Import from Delimited File
 BrowserTreePopupMenu.importXml=Import from XML File
+BrowserTreePopupMenu.inactive=Disable
 BrowserTreePopupMenu.insertStatement=INSERT statement
 BrowserTreePopupMenu.moveToFolder=Move to folder...
 BrowserTreePopupMenu.properties=Connection Properties
 BrowserTreePopupMenu.recycle=Recycle this Connection
 BrowserTreePopupMenu.reload=Reload {0}
+BrowserTreePopupMenu.selectAll=Select all {0}
 BrowserTreePopupMenu.selectStatement=SELECT statement
 BrowserTreePopupMenu.switchDefaultCatalogAndSchemaDisplay=Show only default Catalog or Schema
+BrowserTreePopupMenu.switch=Active
 BrowserTreePopupMenu.updateStatement=UPDATE statement
 BrowserTreePopupMenuActionListener.ExportData=Export Data
 BrowserTreePopupMenuActionListener.ImportData=Import Data
@@ -893,7 +908,7 @@ ConnectionPanel.userField=User Name:
 ConnectionPanel.warning.DataSourceException.level-change=The selected isolation level could not be applied.\nThe JDBC driver returned:\n\n
 ConnectionPanel.warning.level-change=The specified driver for this connection does not support transactions.\nThis feature is unavailable.
 ConnectionPanel.warning.useNewAPI=New API is available with Jaybird 4 driver only and newer.
-ConnectionProgressDialog.connectionLabel=Establishing connection to 
+ConnectionProgressDialog.connectionLabel=Establishing connection to {0}
 ConnectionsListPanel.AvailableConnections=Available Connections
 ConnectionsListPanel.ConnectionName=Connection Name
 ConnectionsListPanel.DataSource=Data Source
@@ -942,7 +957,10 @@ CreateProcedureFunctionPanel.FUNCTION=Function
 CreateProcedureFunctionPanel.InputParameters=Input Parameters
 CreateProcedureFunctionPanel.OutputParameters=Output Parameters
 CreateProcedureFunctionPanel.PROCEDURE=Procedure
+CreateProcedureFunctionPanel.Engine=Engine
+CreateProcedureFunctionPanel.EntryPoint=Entry Point
 CreateProcedureFunctionPanel.Variables=Variables
+CreateProcedureFunctionPanel.useExternal=Use external module
 CreateTableFunctionPanel.Columns=Columns
 CreateTableFunctionPanel.Connection=Connection:
 CreateTableFunctionPanel.Constraints=Constraints
@@ -981,6 +999,7 @@ DatabaseTableNode.foreign-keys=Foreign Keys
 DatabaseTableNode.indexes=Indices
 DatabaseTableNode.primary-keys=Primary Keys
 DefaultConnectionListener.activeConns=Active Data Sources: {0}
+DefaultProgressDialog.Executing=Executing
 DependenciesPanel.dependedOn=Objects, that {0} depends on
 DependenciesPanel.dependent=Objects,that depend on {0}
 DockedTabPane.menuItem.close=Close
@@ -1158,11 +1177,65 @@ GrantManagerPanel.Views=Views
 GrantManagerPanel.connection.close=Connection Close!
 GrantManagerPanel.message.notConnected=No connections available!
 GrantManagerPanel.message.terminate-grant=Are you sure that you want to terminate process?
+HeapMemoryPanel.Measures-the-size-of=Measures the size of the
+HeapMemoryPanel.object-heap=Java Virtual Machine's object heap.
+HeapMemoryPanel.RunGarbageCollector=Run Garbage Collector
+HeapMemoryPanel.Garbage-collection-released=Garbage collection released 
+HeapMemoryPanel.Kb-used= Kb used,  
+HeapMemoryPanel.Kb-total= Kb total
 HistoryCommand.historyEmptyMessage=No SQL command history available
 HostPanel.DataTypes=Data Types
 HostPanel.DatabaseConnection=Database Connection
 HostPanel.DatabaseProperties=Database Properties
 HostPanel.SQLKeywords=SQL Keywords
+ImportDataFromFilePanel.Title=Import data 
+ImportDataFromFilePanel.SelectDelimiter=Select the delimiter
+ImportDataFromFilePanel.SelectFileType=Select the file type
+ImportDataFromFilePanel.SelectTable=Select the table
+ImportDataFromFilePanel.SelectTimeFormat=Select time pattern
+ImportDataFromFilePanel.SelectDateFormat=Select date pattern
+ImportDataFromFilePanel.SelectTimestampDelimiterFormat=Select timestamp delimiter
+ImportDataFromFilePanel.IsFirstColumnNamesText=Source columns names as first row
+ImportDataFromFilePanel.IsEraseDatabaseText=Erase table before import
+ImportDataFromFilePanel.BrowseButtonText=Browse
+ImportDataFromFilePanel.ReadFileButtonText=Read File
+ImportDataFromFilePanel.FillMappingTableButtonText=Fill Mapping Table
+ImportDataFromFilePanel.StartImportButtonText=Import Data
+ImportDataFromFilePanel.TargetConnectionLabel=Target connection:
+ImportDataFromFilePanel.TargetTableLabel=Target table:
+ImportDataFromFilePanel.InputDataFileLabel=Source data file:
+ImportDataFromFilePanel.PropertiesLabel=Import properties & settings:
+ImportDataFromFilePanel.DelimiterLabel=Delimiter:
+ImportDataFromFilePanel.TimeFormatLabel=Time pattern:
+ImportDataFromFilePanel.DateFormatLabel=Date pattern:
+ImportDataFromFilePanel.TimestampDelimiterLabel=Timestamp delimiter:
+ImportDataFromFilePanel.FirstNumericSelectorsLabel=First row:
+ImportDataFromFilePanel.LastNumericSelectorsLabel=Last row:
+ImportDataFromFilePanel.ImportFileTypeLabel=File type:
+ImportDataFromFilePanel.CommitSelectorLabel=Commit step:
+ImportDataFromFilePanel.ImportPropertiesLabel=Import properties:
+ImportDataFromFilePanel.ProgressLabel=Import progress:
+ImportDataFromFilePanel.PreviewAndColumnMappingTablesLabel=Preview/ColumnMapping tables:
+ImportDataFromFilePanel.OpenFileDialogText=Select Import Data File Path
+ImportDataFromFilePanel.OpenFileDialogButton=Select
+ImportDataFromFilePanel.NoDataForImportMessage=No source selected for import
+ImportDataFromFilePanel.FileDoesNotExistMessage=The selected file does not exist:
+ImportDataFromFilePanel.NoFileSelectedMessage=No file selected
+ImportDataFromFilePanel.NoTimeFormatSelectedMessage=No date/time format selected
+ImportDataFromFilePanel.NoFileTypeSelectedMessage=No file type selected
+ImportDataFromFilePanel.FileReadingErrorMessage=File reading error
+ImportDataFromFilePanel.ImportDataErrorMessage=Import data error
+ImportDataFromFilePanel.DateTimeFormatErrorMessage=Unable to convert date to specified format
+ImportDataFromFilePanel.EraseDatabaseErrorMessage=Erasing database table error
+ImportDataFromFilePanel.ColumnMappingTableTargetC=Target column
+ImportDataFromFilePanel.ColumnMappingTableTargetT=Target column type
+ImportDataFromFilePanel.ColumnMappingTableSource=Source column
+ImportDataFromFilePanel.SelectFileTypeMessage=Select file type firstly
+ImportDataFromFilePanel.ReadFileMessage=Read source file firstly
+ImportDataFromFilePanel.SelectTableMessage=Select the target table firstly
+ImportDataFromFilePanel.SelectDelimiterMessage=Select the delimiter firstly
+ImportDataFromFilePanel.NoSourceSelectedMessage=No source column selected in row 
+ImportDataFromFilePanel.ExecutingProgressDialog=Importing data
 ImportDelimitedCommand.title=Import Data
 ImportExportPanelFour.createTableStatementsCheck=Include CREATE TABLE statement
 ImportExportPanelFour.headerLabel=Enter any specific options for the generated files.
@@ -1522,88 +1595,17 @@ WindowAddUser.tag=Tag
 WindowAddUser.value=Value
 
 
-PropertiesAppearance.ChangingTheme.Information=Changing the look and feel may also change the colours applied to syntax\nhighlighting and the results set table views to better suit the selected look
-AboutPanel.Copyright=Copyright
-AboutPanel.System=System
-AboutPanel.Resources=Resources
-AboutPanel.License=License
-HeapMemoryPanel.RunGarbageCollector=Run Garbage Collector
-HeapMemoryPanel.MeasuresTheSize=Measures the size of the
-HeapMemoryPanel.JavaVirtualMachines=Java Virtual Machine's object heap.
-HeapMemoryPanel.GarbageCollection=Garbage collection released 
-HeapMemoryPanel.used=used
-HeapMemoryPanel.total=total
-FindReplaceDialog.FindAndReplace=Find and Replace
-FindReplaceDialog.WholeWordsCheck=Whole words only
-FindReplaceDialog.MatchCaseCheck=Match case
-FindReplaceDialog.WrapCheck=Wrap Search
-FindReplaceDialog.Replace=Replace
-FindReplaceDialog.RegularExpressions=Regular expressions
-SearchFilesDialog.FindAndReplace=Find and Replace
-SearchFilesDialog.WholeWordsCheck=Whole words only
-SearchFilesDialog.MatchCaseCheck=Match case
-SearchFilesDialog.WrapCheck=Wrap Search
-SearchFilesDialog.Replace=Replace
-SearchFilesDialog.RegularExpressions=Regular expressions
-FindReplaceDialog.SearchUp=Search Up
-FindReplaceDialog.SearchDown=Search Down
-FindReplaceDialog.ReplaceAll=Replace All
-FindReplaceDialog.FindText=Find Text
-FindReplaceDialog.message=The replacement text must be different to the find text.
-SearchFilesDialog.message.NotSelectedPath=You must select a search path
-SearchFilesDialog.message.ThePathNotExist=The path or file entered does not exist
-SearchFilesDialog.FileTypes=File Types
-SearchFilesDialog.SearchPath=Search Path
-SearchFilesDialog.message.seachSubdirsCheck=Search Subdirectories
-SearchFilesDialog.message.EnterSearchText=You must enter search text
-SearchFilesDialog.message.EnterReplaceText=You must enter replacement text
-ApplicationLauncher.console-UsingJavaVersion=Using Java version 
-ApplicationLauncher.console-JavaVersion=Java version
-ApplicationLauncher.console-RedExpertVersion=Red Expert version
-ApplicationLauncher.console-OSVersion=Operating System
-ApplicationLauncher.console-SystemReady=System is ready.
-CheckForUpdateNotifier.console-CannotCheckForUpdates=Cannot check for updates
-CheckForUpdateNotifier.console-CheckingForNewVersion=Checking for new version update from
-CheckForUpdateNotifier.console-RedExpertUpToDate=Red Expert is up to date.
-CheckForUpdateNotifier.console-ErrorCheckingForUpdate=Error checking for update
-CheckForUpdateNotifier.console-DownloadUpdate=Download update
-CheckForUpdateNotifier.console-ApplicationNeedsUpdate=The application needs to be updated
-CheckForUpdateNotifier.Version=version
-ClearRecentFilesCommand.message=An IO error occurred clearing the recent open files list
-HeapMemoryStatusSnippet.console-JavaHeapSize=Java heap size
-OpenFileDialog.file-text=Text files
-OpenFileDialog.file-sql=SQL files
-OpenFileDialog.file-RedExpertERD=Red Expert ERD
-OpenFileDialog.new-command.open-query-editor=Open Query Editor Window
-OpenFileDialog.new-command.new-query-editor=New Query Editor Window
-OpenFileDialog.new-command.new-scratch-pad=New Scratch Pad Window
-OpenFileDialog.new-command.new-erd=New ERD Window
-OpenFileDialog.new-command.open-with=Open With
-FileChooserDialog.new-command.overwrite-file=Overwrite existing file?
-TableSelectionCombosGroup.error.selection-object=Error during database object selection
-ConnectionProgressDialog.connection-canceled=Connection cancelled
-DefaultStatementExecutor.table.invalid-name=Invalid table name
-BrowserTreePopupMenuActionListener.save-as.command=Select Output File Path
-BrowserTreePopupMenuActionListener.ConfirmCancelDialog=The selected file exists.\nOverwrite existing file?
-BrowserTreePopupMenuActionListener.ErrorMessage=Error writing output pane contents to file.\n
-QueryEditorResultsExporter.ExportQueryResults=Export Query Results
-QueryEditorResultsExporter.IncludeColumnNamesAsFirstRow=Include column names as first row
-QueryEditorResultsExporter.UseDoubleQuotesForChar/varchar/longvarcharColumns=Use double quotes for char/varchar/longvarchar columns
-QueryEditorResultsExporter.SelectTheExportTypeDelimiterAndFilePathBelow=Select the export type, delimiter and file path below.
-QueryEditorResultsExporter.FileFormat=File Format:
-QueryEditorResultsExporter.Delimiter=Delimiter:
+PrintSelectDialog.Print=Print
+PrintSelectDialog.Print_Preview=Print preview
+PrintSelectDialog.Preview=Preview
 
-QueryEditorResultsExporter.Custom=Custom:
-QueryEditorResultsExporter.SQLExport=How save SQL query:
-QueryEditorResultsExporter.SQLInFile=Text file
-QueryEditorResultsExporter.SQLQueryEditor=Query Editor
-QueryEditorResultsExporter.TableName=Table name:
-QueryEditorResultsExporter.FilePath=File Path:
-QueryEditorResultsExporter.SelectExportFilePath=Select Export File Path
-QueryEditorResultsExporter.YouMustSpecifyAFileToExportTo=You must specify a file to export to.
-QueryEditorResultsExporter.YouMustEnterACustomDelimiter=You must enter a custom delimeter
-QueryEditorResultsExporter.ResultSetExportComplete=Result set export complete.
-QueryEditorResultsExporter.ErrorWritingToFile=Error writing to file:\n\n
-QueryEditorResultsExporter.Failed=failed
-QueryEditorResultsExporter.ExportingQueryResults=Exporting Query Results
-QueryEditorResultsExporter.ExportingResultSet=Exporting result set...
+
+PrintSelectDialog.Select_the_print_area=Select the print area
+PrintSelectDialog.SQL_Query_Text_Area=SQL Query Text Area
+PrintSelectDialog.SQL_Table_Results_Panel=SQL Table Results Panel
+PrintSelectDialog.No_SQL_table_results=No SQL table results.
+PrintSelectDialog.Cancel=Cancel
+
+PrintPreviewer.Print=Print
+PrintPreviewer.Page_Setup=Page Setup
+PrintPreviewer.Close=Close
