--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -181,6 +181,8 @@ action.help-command.description=Отображает разделы справк
 action.help-command=Разделы справки
 action.import-connections-from-DB-command=Импорт подключений из Базы Данных
 action.import-connections-from-file-command=Импорт подключений из файла
+action.import-data-from-file-command=Импорт данных из файла
+action.import-data-from-file-command.description=Импорт данных из локального файла в БД (*.csv, *.xlsx, ...)
 action.import-delimited-command=Импорт из файла с разделителями
 action.import-xml-command=Импорт из XML
 action.insert-row-command=Создать новый столбец в таблице после выделенного
@@ -513,6 +515,15 @@ preferences.restart-message=Настройки вступят в силу пос
 # -----------------------------------------------------
 # Classes
 # -----------------------------------------------------
+AboutPanel.Title=О программе
+AboutPanel.Copyright=Авторские права
+AboutPanel.System=Система
+AboutPanel.Resources=Используемые ресурсы
+AboutPanel.License=Лицензия
+AboutPanel.Version=Версия
+AboutPanel.Fork_of_execute_query=Ветка выполняемого запроса
+AboutPanel.Error_loading_license_panel_text=Ошибка загрузки панели текста лицензии
+AboutPanel.ViewLicense=Просмотреть Лицензию
 AbstractCreateObjectPanel.SQL=SQL
 AbstractCreateObjectPanel.active=Активный
 AbstractCreateObjectPanel.check=Проверка
@@ -725,6 +736,7 @@ BrowserTreePopupMenu.TRIGGER=триггер
 BrowserTreePopupMenu.USER=пользователя
 BrowserTreePopupMenu.VIEW=представление
 BrowserTreePopupMenu.addNewConnection=Новое подключение
+BrowserTreePopupMenu.active=Включить
 BrowserTreePopupMenu.connect=Подключить
 BrowserTreePopupMenu.connectText=Подключитьcя к базе данных {0}
 BrowserTreePopupMenu.copyName=Копировать название
@@ -749,12 +761,15 @@ BrowserTreePopupMenu.exportXml=Экспорт в XML файл
 BrowserTreePopupMenu.importDelimited=Импорт из файла с разделителями
 BrowserTreePopupMenu.importXml=Импорт из XML
 BrowserTreePopupMenu.insertStatement=INSERT запрос
+BrowserTreePopupMenu.inactive=Выключить
 BrowserTreePopupMenu.moveToFolder=Переместить в папку...
 BrowserTreePopupMenu.properties=Свойства подключения
 BrowserTreePopupMenu.recycle=Переподключиться
 BrowserTreePopupMenu.reload=Перезагрузить {0}
 BrowserTreePopupMenu.selectStatement=SELECT запрос
+BrowserTreePopupMenu.selectAll=Выбрать все {0}
 BrowserTreePopupMenu.switchDefaultCatalogAndSchemaDisplay=Показывать только стандартные каталог или схему
+BrowserTreePopupMenu.switch=Активность
 BrowserTreePopupMenu.updateStatement=UPDATE запрос
 BrowserTreePopupMenuActionListener.ExportData=Экспорт данных
 BrowserTreePopupMenuActionListener.ImportData=Импорт данных
@@ -943,6 +958,9 @@ CreateProcedureFunctionPanel.InputParameters=Входные параметры
 CreateProcedureFunctionPanel.OutputParameters=Выходные параметры
 CreateProcedureFunctionPanel.PROCEDURE=процедуры
 CreateProcedureFunctionPanel.Variables=Переменные
+CreateProcedureFunctionPanel.Engine=Имя движка
+CreateProcedureFunctionPanel.EntryPoint=Внешний модуль
+CreateProcedureFunctionPanel.useExternal=Использовать внешний модуль
 CreateTableFunctionPanel.Columns=Столбцы
 CreateTableFunctionPanel.Connection=Подключение:
 CreateTableFunctionPanel.Constraints=Ограничения
@@ -981,6 +999,7 @@ DatabaseTableNode.foreign-keys=Внешние ключи
 DatabaseTableNode.indexes=Индексы
 DatabaseTableNode.primary-keys=Первичные ключи
 DefaultConnectionListener.activeConns=Активные подключения: {0}
+DefaultProgressDialog.Executing=Выполнение
 DependenciesPanel.dependedOn=Объекты БД от которых зависит {0}
 DependenciesPanel.dependent=Объекты зависящие от {0}
 DockedTabPane.menuItem.close=Закрыть
@@ -1158,11 +1177,65 @@ GrantManagerPanel.Views=Представления
 GrantManagerPanel.connection.close=Соединение прервано!
 GrantManagerPanel.message.notConnected=Нет доступных подключений!
 GrantManagerPanel.message.terminate-grant=Вы уверены, что хотите прервать процесс назначения привилегий?
+HeapMemoryPanel.Measures-the-size-of=Измерение используемой виртуальной машиной
+HeapMemoryPanel.object-heap=Java памяти в реальном времени.
+HeapMemoryPanel.RunGarbageCollector=Запустить сборщик мусора
+HeapMemoryPanel.Garbage-collection-released=Сборка мусора завершена, очищено 
+HeapMemoryPanel.Kb-used= Kb используется,  
+HeapMemoryPanel.Kb-total= Kb всего
 HistoryCommand.historyEmptyMessage=В истории нет доступных SQL команд
 HostPanel.DataTypes=Типы Данных
 HostPanel.DatabaseConnection=Подключение к базе данных
 HostPanel.DatabaseProperties=Свойства базы данных
 HostPanel.SQLKeywords=Ключевые слова SQL
+ImportDataFromFilePanel.Title=Импорт данных 
+ImportDataFromFilePanel.SelectDelimiter=Выберите разделитель
+ImportDataFromFilePanel.SelectFileType=Выберите тип файла
+ImportDataFromFilePanel.SelectTable=Выберите целевую таблицу
+ImportDataFromFilePanel.SelectTimeFormat=Выберете паттерн времени
+ImportDataFromFilePanel.SelectDateFormat=Выберете паттерн даты
+ImportDataFromFilePanel.SelectTimestampDelimiterFormat=Выберете разделитель даты/времени
+ImportDataFromFilePanel.IsFirstColumnNamesText=Первая строка заголовки столбцов источника
+ImportDataFromFilePanel.IsEraseDatabaseText=Очистить таблицу перед вставкой
+ImportDataFromFilePanel.BrowseButtonText=Открыть Файл
+ImportDataFromFilePanel.ReadFileButtonText=Считать Файл
+ImportDataFromFilePanel.FillMappingTableButtonText=Заполнить Таблицу Сопоставлений
+ImportDataFromFilePanel.StartImportButtonText=Импортировать Данные
+ImportDataFromFilePanel.TargetConnectionLabel=Целевая БД:
+ImportDataFromFilePanel.TargetTableLabel=Целевая таблица:
+ImportDataFromFilePanel.InputDataFileLabel=Путь к файлу:
+ImportDataFromFilePanel.DelimiterLabel=Разделитель:
+ImportDataFromFilePanel.TimeFormatLabel=Паттерн времени:
+ImportDataFromFilePanel.DateFormatLabel=Паттерн даты:
+ImportDataFromFilePanel.TimestampDelimiterLabel=Разделитель даты/времени:
+ImportDataFromFilePanel.FirstNumericSelectorsLabel=Первая импортируемая строка:
+ImportDataFromFilePanel.LastNumericSelectorsLabel=Последняя импортируемая строка:
+ImportDataFromFilePanel.CommitSelectorLabel=Шаг коммита:
+ImportDataFromFilePanel.ImportFileTypeLabel=Тип файла:
+ImportDataFromFilePanel.PropertiesLabel=Свойства и настройки импорта:
+ImportDataFromFilePanel.ImportPropertiesLabel=Свойства импорта:
+ImportDataFromFilePanel.ProgressLabel=Прогресс импорта:
+ImportDataFromFilePanel.PreviewAndColumnMappingTablesLabel=Таблица предпросмотра данных / Таблица сопоставления:
+ImportDataFromFilePanel.OpenFileDialogText=Выберите Импортируемый Файл
+ImportDataFromFilePanel.OpenFileDialogButton=Выбрать
+ImportDataFromFilePanel.NoDataForImportMessage=Не выбраны источники данных для импорта
+ImportDataFromFilePanel.FileDoesNotExistMessage=Выбранный файл не существует:
+ImportDataFromFilePanel.NoFileSelectedMessage=Файл не выбран
+ImportDataFromFilePanel.NoTimeFormatSelectedMessage=Формат даты/времени не выбран
+ImportDataFromFilePanel.NoFileTypeSelectedMessage=Тип файла не выбран
+ImportDataFromFilePanel.FileReadingErrorMessage=Ошибка чтения файла
+ImportDataFromFilePanel.ImportDataErrorMessage=Ошибка импорта данных
+ImportDataFromFilePanel.ColumnMappingTableTargetC=Целевой столбец
+ImportDataFromFilePanel.DateTimeFormatErrorMessage=Невозможно преобразовать дату к указанному формату
+ImportDataFromFilePanel.EraseDatabaseErrorMessage=Ошибка предварительной очистки таблицы базы данных
+ImportDataFromFilePanel.ColumnMappingTableTargetT=Тип целевого столбца
+ImportDataFromFilePanel.ColumnMappingTableSource=Столбец источника
+ImportDataFromFilePanel.SelectFileTypeMessage=Сначала выберите файл
+ImportDataFromFilePanel.ReadFileMessage=Сначала откройте файл
+ImportDataFromFilePanel.SelectTableMessage=Сначала выберите целевую таблицу
+ImportDataFromFilePanel.SelectDelimiterMessage=Сначала выберите разделитель
+ImportDataFromFilePanel.NoSourceSelectedMessage=Не выбран источник данных в строке 
+ImportDataFromFilePanel.ExecutingProgressDialog=Импортирование данных
 ImportDelimitedCommand.title=Импорт данных
 ImportExportPanelFour.createTableStatementsCheck=Включить CREATE TABLE запрос
 ImportExportPanelFour.headerLabel=Введите любые конкретные параметры для сгенерированных файлов.
@@ -1522,88 +1595,17 @@ WindowAddUser.tag=Метка
 WindowAddUser.value=Значение
 
 
-PropertiesAppearance.ChangingTheme.Information=Изменение внешнего вида может также изменить цвета, применяемые к подсветке синтаксиса\nи результаты заданных таблиц представлены так, чтобы они лучше соответствовали выбранному виду
-AboutPanel.Copyright=Авторское право
-AboutPanel.System=Система
-AboutPanel.Resources=Источники
-AboutPanel.License=Лицензия
-HeapMemoryPanel.RunGarbageCollector=Запуск Сборщик Мусора
-HeapMemoryPanel.MeasuresTheSize=Измеряет размер кучи
-HeapMemoryPanel.JavaVirtualMachines=объектов виртуальной машины Java.
-HeapMemoryPanel.GarbageCollection=Сборщик мусора освободил 
-HeapMemoryPanel.used=использовано
-HeapMemoryPanel.total=всего
-FindReplaceDialog.FindAndReplace=Найти и Заменить
-FindReplaceDialog.WholeWordsCheck=Только целые слова
-FindReplaceDialog.MatchCaseCheck=Учитывать регистр
-FindReplaceDialog.WrapCheck=Завершить поиск
-FindReplaceDialog.Replace=Заменить
-FindReplaceDialog.RegularExpressions=Регулярные выражения
-SearchFilesDialog.FindAndReplace=Найти и Заменить
-SearchFilesDialog.WholeWordsCheck=Только целые слова
-SearchFilesDialog.MatchCaseCheck=Учитывать регистр
-SearchFilesDialog.WrapCheck=Завершить поиск
-SearchFilesDialog.Replace=Заменить
-SearchFilesDialog.RegularExpressions=Регулярные выражения
-FindReplaceDialog.SearchUp=Поиск Вверх
-FindReplaceDialog.SearchDown=Поиск Вниз
-FindReplaceDialog.ReplaceAll=Замените Все
-FindReplaceDialog.FindText=Поиск текста
-FindReplaceDialog.message=Текст замены должен отличаться от текста поиска.
-SearchFilesDialog.message.NotSelectedPath=Вы должны указать путь
-SearchFilesDialog.message.ThePathNotExist=Введенный путь или файл не существует
-SearchFilesDialog.FileTypes=Тип файла:
-SearchFilesDialog.SearchPath=Путь поиска:
-SearchFilesDialog.message.seachSubdirsCheck=Поиск в подкаталогах
-SearchFilesDialog.message.EnterSearchText=Вы должны ввести текст для поиска
-SearchFilesDialog.message.EnterReplaceText=Вы должны ввести текст замены
-ApplicationLauncher.console-UsingJavaVersion=Использование версии Java 
-ApplicationLauncher.console-JavaVersion=Версия Java
-ApplicationLauncher.console-RedExpertVersion=Версия Red Expert
-ApplicationLauncher.console-OSVersion=Операционная система
-ApplicationLauncher.console-SystemReady=Система готова.
-CheckForUpdateNotifier.console-CannotCheckForUpdates=Не удается проверить наличие обновлений
-CheckForUpdateNotifier.console-CheckingForNewVersion=Проверка наличия обновления новой версии с 
-CheckForUpdateNotifier.console-RedExpertUpToDate=Red Expert обновлен.
-CheckForUpdateNotifier.console-ErrorCheckingForUpdate=Проверка ошибок при обновлении
-CheckForUpdateNotifier.console-DownloadUpdate=Загрузить обновление
-CheckForUpdateNotifier.console-ApplicationNeedsUpdate=Приложение необходимо обновить
-CheckForUpdateNotifier.Version=версия
-ClearRecentFilesCommand.message=Произошла ошибка ввода-вывода при очистке списка последних открытых файлов
-HeapMemoryStatusSnippet.console-JavaHeapSize=Размер кучи Java
-OpenFileDialog.file-text=Текстовые файлы
-OpenFileDialog.file-sql=SQL-файлы
-OpenFileDialog.file-RedExpertERD=Red Expert ERD
-OpenFileDialog.new-command.open-query-editor=Открыть окно Редактора запросов
-OpenFileDialog.new-command.new-query-editor=Новое окно Редактора запросов
-OpenFileDialog.new-command.new-scratch-pad=Новое окно Блокнота
-OpenFileDialog.new-command.new-erd=Новое окно ERD
-OpenFileDialog.new-command.open-with=Открыть С
-FileChooserDialog.new-command.overwrite-file=Перезаписать существующий файл?
-TableSelectionCombosGroup.error.selection-object=Ошибка при выборе объекта базы данных
-ConnectionProgressDialog.connection-canceled=Соединение отменено
-DefaultStatementExecutor.table.invalid-name=Недопустимое имя таблицы
-BrowserTreePopupMenuActionListener.save-as.command=Сохранить файл как
-BrowserTreePopupMenuActionListener.ConfirmCancelDialog=Выбранный файл существует. \nПерезаписать существующий файл?
-BrowserTreePopupMenuActionListener.ErrorMessage=Ошибка записи выходных данных в файл.\n
-QueryEditorResultsExporter.ExportQueryResults=Экспорт Результатов запроса
-QueryEditorResultsExporter.IncludeColumnNamesAsFirstRow=Включить имена столбцов в качестве первой строки
-QueryEditorResultsExporter.UseDoubleQuotesForChar/varchar/longvarcharColumns=Используйте двойные кавычки для столбцов char/varchar/longvarchar
-QueryEditorResultsExporter.SelectTheExportTypeDelimiterAndFilePathBelow=Выберите тип экспорта, разделитель и путь к файлу ниже.
-QueryEditorResultsExporter.FileFormat=Формат файла:
-QueryEditorResultsExporter.Delimiter=Разделитель:
+PrintSelectDialog.Print=Печать
+PrintSelectDialog.Print_Preview=Предварительный просмотр
+PrintSelectDialog.Preview=Показать
 
-QueryEditorResultsExporter.Custom=Пользовательский:
-QueryEditorResultsExporter.SQLExport=Как сохранить SQL запрос:
-QueryEditorResultsExporter.SQLInFile=В текстовый файл
-QueryEditorResultsExporter.SQLQueryEditor=Редактор запроса
-QueryEditorResultsExporter.TableName=Имя таблицы:
-QueryEditorResultsExporter.FilePath=Путь к файлу:
-QueryEditorResultsExporter.SelectExportFilePath=Выберите Путь к Файлу Экспорта
-QueryEditorResultsExporter.YouMustSpecifyAFileToExportTo=Вы должны указать файл для экспорта.
-QueryEditorResultsExporter.YouMustEnterACustomDelimiter=Вы должны ввести пользовательский разделитель
-QueryEditorResultsExporter.ResultSetExportComplete=Экспорт результирующего набора завершен.
-QueryEditorResultsExporter.ErrorWritingToFile=Ошибка записи в файл:\n\n
-QueryEditorResultsExporter.Failed=Неудачно
-QueryEditorResultsExporter.ExportingQueryResults=Экспорт результатов запроса
-QueryEditorResultsExporter.ExportingResultSet=Экспорт результирующего набора...
+PrintSelectDialog.Select_the_print_area=Выберите область печати
+PrintSelectDialog.SQL_Query_Text_Area=SQL-запрос текстовой области
+PrintSelectDialog.SQL_Table_Results_Panel=SQL таблица
+PrintSelectDialog.Cancel=Отмена
+
+PrintSelectDialog.No_SQL_table_results=SQL таблица не найдена.
+
+PrintPreviewer.Print=Печать
+PrintPreviewer.Page_Setup=Настройка страницы
+PrintPreviewer.Close=Закрыть
