--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1609,3 +1609,86 @@ PrintSelectDialog.No_SQL_table_results=SQL таблица не найдена.
 PrintPreviewer.Print=Печать
 PrintPreviewer.Page_Setup=Настройка страницы
 PrintPreviewer.Close=Закрыть
+
+
+
+PropertiesAppearance.ChangingTheme.Information=Изменение внешнего вида может также изменить цвета, применяемые к подсветке синтаксиса\nи результаты заданных таблиц представлены так, чтобы они лучше соответствовали выбранному виду
+HeapMemoryPanel.MeasuresTheSize=Измеряет размер кучи
+HeapMemoryPanel.JavaVirtualMachines=объектов виртуальной машины Java.
+HeapMemoryPanel.GarbageCollection=Сборщик мусора освободил 
+HeapMemoryPanel.used=использовано
+HeapMemoryPanel.total=всего
+FindReplaceDialog.FindAndReplace=Найти и Заменить
+FindReplaceDialog.WholeWordsCheck=Только целые слова
+FindReplaceDialog.MatchCaseCheck=Учитывать регистр
+FindReplaceDialog.WrapCheck=Завершить поиск
+FindReplaceDialog.Replace=Заменить
+FindReplaceDialog.RegularExpressions=Регулярные выражения
+SearchFilesDialog.FindAndReplace=Найти и Заменить
+SearchFilesDialog.WholeWordsCheck=Только целые слова
+SearchFilesDialog.MatchCaseCheck=Учитывать регистр
+SearchFilesDialog.WrapCheck=Завершить поиск
+SearchFilesDialog.Replace=Заменить
+SearchFilesDialog.RegularExpressions=Регулярные выражения
+FindReplaceDialog.SearchUp=Поиск Вверх
+FindReplaceDialog.SearchDown=Поиск Вниз
+FindReplaceDialog.ReplaceAll=Замените Все
+FindReplaceDialog.FindText=Поиск текста
+FindReplaceDialog.message=Текст замены должен отличаться от текста поиска.
+SearchFilesDialog.message.NotSelectedPath=Вы должны указать путь
+SearchFilesDialog.message.ThePathNotExist=Введенный путь или файл не существует
+SearchFilesDialog.FileTypes=Тип файла:
+SearchFilesDialog.SearchPath=Путь поиска:
+SearchFilesDialog.message.seachSubdirsCheck=Поиск в подкаталогах
+SearchFilesDialog.message.EnterSearchText=Вы должны ввести текст для поиска
+SearchFilesDialog.message.EnterReplaceText=Вы должны ввести текст замены
+ApplicationLauncher.console-UsingJavaVersion=Использование версии Java 
+ApplicationLauncher.console-JavaVersion=Версия Java
+ApplicationLauncher.console-RedExpertVersion=Версия Red Expert
+ApplicationLauncher.console-OSVersion=Операционная система
+ApplicationLauncher.console-SystemReady=Система готова.
+CheckForUpdateNotifier.console-CannotCheckForUpdates=Не удается проверить наличие обновлений
+CheckForUpdateNotifier.console-CheckingForNewVersion=Проверка наличия обновления новой версии с 
+CheckForUpdateNotifier.console-RedExpertUpToDate=Red Expert обновлен.
+CheckForUpdateNotifier.console-ErrorCheckingForUpdate=Проверка ошибок при обновлении
+CheckForUpdateNotifier.console-DownloadUpdate=Загрузить обновление
+CheckForUpdateNotifier.console-ApplicationNeedsUpdate=Приложение необходимо обновить
+CheckForUpdateNotifier.Version=версия
+ClearRecentFilesCommand.message=Произошла ошибка ввода-вывода при очистке списка последних открытых файлов
+HeapMemoryStatusSnippet.console-JavaHeapSize=Размер кучи Java
+OpenFileDialog.file-text=Текстовые файлы
+OpenFileDialog.file-sql=SQL-файлы
+OpenFileDialog.file-RedExpertERD=Red Expert ERD
+OpenFileDialog.new-command.open-query-editor=Открыть окно Редактора запросов
+OpenFileDialog.new-command.new-query-editor=Новое окно Редактора запросов
+OpenFileDialog.new-command.new-scratch-pad=Новое окно Блокнота
+OpenFileDialog.new-command.new-erd=Новое окно ERD
+OpenFileDialog.new-command.open-with=Открыть С
+FileChooserDialog.new-command.overwrite-file=Перезаписать существующий файл?
+TableSelectionCombosGroup.error.selection-object=Ошибка при выборе объекта базы данных
+ConnectionProgressDialog.connection-canceled=Соединение отменено
+DefaultStatementExecutor.table.invalid-name=Недопустимое имя таблицы
+BrowserTreePopupMenuActionListener.save-as.command=Сохранить файл как
+BrowserTreePopupMenuActionListener.ConfirmCancelDialog=Выбранный файл существует. \nПерезаписать существующий файл?
+BrowserTreePopupMenuActionListener.ErrorMessage=Ошибка записи выходных данных в файл.\n
+QueryEditorResultsExporter.ExportQueryResults=Экспорт Результатов запроса
+QueryEditorResultsExporter.IncludeColumnNamesAsFirstRow=Включить имена столбцов в качестве первой строки
+QueryEditorResultsExporter.UseDoubleQuotesForChar/varchar/longvarcharColumns=Используйте двойные кавычки для столбцов char/varchar/longvarchar
+QueryEditorResultsExporter.SelectTheExportTypeDelimiterAndFilePathBelow=Выберите тип экспорта, разделитель и путь к файлу ниже.
+QueryEditorResultsExporter.FileFormat=Формат файла:
+QueryEditorResultsExporter.Delimiter=Разделитель:
+
+QueryEditorResultsExporter.Custom=Пользовательский:
+QueryEditorResultsExporter.SQLExport=Как сохранить SQL запрос:
+QueryEditorResultsExporter.SQLInFile=В текстовый файл
+QueryEditorResultsExporter.SQLQueryEditor=Редактор запроса
+QueryEditorResultsExporter.TableName=Имя таблицы:
+QueryEditorResultsExporter.FilePath=Путь к файлу:
+QueryEditorResultsExporter.SelectExportFilePath=Выберите Путь к Файлу Экспорта
+QueryEditorResultsExporter.YouMustSpecifyAFileToExportTo=Вы должны указать файл для экспорта.
+QueryEditorResultsExporter.YouMustEnterACustomDelimiter=Вы должны ввести пользовательский разделитель
+QueryEditorResultsExporter.ResultSetExportComplete=Экспорт результирующего набора завершен.
+QueryEditorResultsExporter.ErrorWritingToFile=Ошибка записи в файл:\n\n
+QueryEditorResultsExporter.Failed=Неудачно
+QueryEditorResultsExporter.ExportingQueryResults=Экспорт результатов запроса
+QueryEditorResultsExporter.ExportingResultSet=Экспорт результирующего набора...
