Fix RS-85966. 1. Fixed bug, when the current generator value was displayed in the firstValueField. 2. Added method for getting first generator value (DefaultDatabaseSequence.getSequenceFirstValue()). 3. Reworked GUI in CreateGeneratorPanel.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -715,7 +715,7 @@ BrowserTreePopupMenu.ImportData=Import Data
 BrowserTreePopupMenu.PACKAGE=package
 BrowserTreePopupMenu.PROCEDURE=procedure
 BrowserTreePopupMenu.ROLE=role
-BrowserTreePopupMenu.SEQUENCE=sequences
+BrowserTreePopupMenu.SEQUENCE=sequence
 BrowserTreePopupMenu.SQL=SQL
 BrowserTreePopupMenu.SYNONYM=synonym
 BrowserTreePopupMenu.SYSTEM_DATE_TIME_FUNCTIONS=system date time function
@@ -939,6 +939,7 @@ CreateFunctionPanel.ReturnsType=Returns type
 CreateFunctionPanel.Type=Type
 CreateGeneratorPanel.increment=Increment
 CreateGeneratorPanel.start-value=Start Value
+CreateGeneratorPanel.current-value=Current Value
 CreateIndexPanel.ascending=ASCENDING
 CreateIndexPanel.descending=DESCENDING
 CreateIndexPanel.fields=Fields
