--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -939,6 +939,7 @@ CreateFunctionPanel.ReturnsType=Возвращаемый тип
 CreateFunctionPanel.Type=Тип
 CreateGeneratorPanel.increment=Инкремент
 CreateGeneratorPanel.start-value=Начальное значение
+CreateGeneratorPanel.current-value=Текущее значение
 CreateIndexPanel.ascending=По возрастанию
 CreateIndexPanel.descending=По убыванию
 CreateIndexPanel.fields=Поля
