Add the ability to move to the beginning and end of a list in the ListSelectionPanel

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1286,6 +1286,8 @@ ListSelectionPanel.Move=Move
 ListSelectionPanel.SelectedColumns=Selected Columns:
 ListSelectionPanel.moveSelectionDown=Move selection down
 ListSelectionPanel.moveSelectionUp=Move selection up
+ListSelectionPanel.moveSelectionPageDown=Move selection bottom
+ListSelectionPanel.moveSelectionPageUp=Move selection top
 ListSelectionPanel.removeAllAction=Remove all
 ListSelectionPanel.removeOneAction=Remove one
 ListSelectionPanel.selectAllAction=Select all
@@ -1543,7 +1545,9 @@ TraceManagerPanel.UseConfigFile=Use Config File
 TraceManagerPanel.User=User
 TraceManagerPanel.Username=User name
 TraceManagerPanel.VisibleColumns=Visible Columns
-TraceManagerPanel.Logger=Logger
+TraceManagerPanel.Logger=Grid View
+TraceManagerPanel.Body=Body
+TraceManagerPanel.matchCase=Match case
 TraceManagerPanel.title=Trace Manager
 UserManagerPanel.Add=Add
 UserManagerPanel.AddRole=Add role
