--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1286,6 +1286,8 @@ ListSelectionPanel.Move=Переместить
 ListSelectionPanel.SelectedColumns=Выбранные столбцы:
 ListSelectionPanel.moveSelectionDown=Переместить выделение вниз
 ListSelectionPanel.moveSelectionUp=Переместить выделение вверх
+ListSelectionPanel.moveSelectionPageDown=Переместить выделение в конец
+ListSelectionPanel.moveSelectionPageUp=Переместить выделение в начало
 ListSelectionPanel.removeAllAction=Удалить все
 ListSelectionPanel.removeOneAction=Удалить один
 ListSelectionPanel.selectAllAction=Выбрать все
@@ -1543,7 +1545,9 @@ TraceManagerPanel.UseConfigFile=Использовать файл конфигу
 TraceManagerPanel.User=Пользователь
 TraceManagerPanel.Username=Имя пользователя
 TraceManagerPanel.VisibleColumns=Видимые столбцы
-TraceManagerPanel.Logger=Журнал
+TraceManagerPanel.Logger=Таблица событий
+TraceManagerPanel.Body=Тело события
+TraceManagerPanel.matchCase=Учитывать регистр
 TraceManagerPanel.title=Трейс менеджер
 UserManagerPanel.Add=Добавить
 UserManagerPanel.AddRole=Добавить роль
