Fix RS-85958. 1. Added "COMMENT ON TABLE ..." into SQLUtils.generateCreateTable(). 2. Added possibility to add comment on table in CreateTableFunctionPanel

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -978,6 +978,7 @@ CreateTableFunctionPanel.ExternalTableDataFileLabel=Файл данных:
 CreateTableFunctionPanel.OpenFileDialogText=Выберите Файл Данных
 CreateTableFunctionPanel.OpenFileDialogButton=Выбрать
 CreateTableFunctionPanel.FileDoesNotExistMessage=Выбранный файл не существует
+CreateTableFunctionPanel.TableCommentLabel=Описание
 CreateTablePanel.Create=Создать
 CreateTablePanel.column-names=столбцов
 CreateTablePanel.error.retrieving=Ошибка построения списка {0} для {1}.\n\nСистема вернула:\n{2}
