--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -978,6 +978,7 @@ CreateTableFunctionPanel.ExternalTableDataFileLabel=Data File:
 CreateTableFunctionPanel.OpenFileDialogText=Select Data File
 CreateTableFunctionPanel.OpenFileDialogButton=Select
 CreateTableFunctionPanel.FileDoesNotExistMessage=The selected file does not exist
+CreateTableFunctionPanel.TableCommentLabel=Description
 CreateTablePanel.Create=Create
 CreateTablePanel.column-names=column names
 CreateTablePanel.error.retrieving=Error retrieving the {0} list for the {1}.\n\nThe system returned:\n{2}
