Fix RS-85958. 1. Replaced "COMMENT ON TABLE ..." block in CreateTableFunctionPanel 2. Added possibility for change comment in BrowserTableEditingPanel

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -696,6 +696,8 @@ BrowserTableEditingPanel.table-indexes=Table Indices
 BrowserTableEditingPanel.table-triggers=Table Triggers
 BrowserTableEditingPanel.table-keys=Table Keys
 BrowserTableEditingPanel.table-name=Table Name:
+BrowserTableEditingPanel.comment-field-label=Comment
+BrowserTableEditingPanel.SaveCommentButton=Save
 BrowserTreeFolderPopupMenu.ConnectAll=Connect All
 BrowserTreeFolderPopupMenu.DeleteFolder=Delete Folder
 BrowserTreeFolderPopupMenu.DisconnectAll=Disconnect All
@@ -978,7 +980,7 @@ CreateTableFunctionPanel.ExternalTableDataFileLabel=Data File:
 CreateTableFunctionPanel.OpenFileDialogText=Select Data File
 CreateTableFunctionPanel.OpenFileDialogButton=Select
 CreateTableFunctionPanel.FileDoesNotExistMessage=The selected file does not exist
-CreateTableFunctionPanel.TableCommentLabel=Description
+CreateTableFunctionPanel.TableCommentLabel=Comment
 CreateTablePanel.Create=Create
 CreateTablePanel.column-names=column names
 CreateTablePanel.error.retrieving=Error retrieving the {0} list for the {1}.\n\nThe system returned:\n{2}
