--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -695,6 +695,8 @@ BrowserTableEditingPanel.table-indexes=Табличные индексы
 BrowserTableEditingPanel.table-triggers=Табличные триггеры
 BrowserTableEditingPanel.table-keys=Ключи таблицы
 BrowserTableEditingPanel.table-name=Имя таблицы:
+BrowserTableEditingPanel.comment-field-label=Комментарий
+BrowserTableEditingPanel.SaveCommentButton=Сохранить
 BrowserTreeFolderPopupMenu.ConnectAll=Подключить все
 BrowserTreeFolderPopupMenu.DeleteFolder=Удалить папку
 BrowserTreeFolderPopupMenu.DisconnectAll=Отключить все
@@ -978,7 +980,7 @@ CreateTableFunctionPanel.ExternalTableDataFileLabel=Файл данных:
 CreateTableFunctionPanel.OpenFileDialogText=Выберите Файл Данных
 CreateTableFunctionPanel.OpenFileDialogButton=Выбрать
 CreateTableFunctionPanel.FileDoesNotExistMessage=Выбранный файл не существует
-CreateTableFunctionPanel.TableCommentLabel=Описание
+CreateTableFunctionPanel.TableCommentLabel=Комментарий
 CreateTablePanel.Create=Создать
 CreateTablePanel.column-names=столбцов
 CreateTablePanel.error.retrieving=Ошибка построения списка {0} для {1}.\n\nСистема вернула:\n{2}
