Fixed Java version display

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1638,7 +1638,7 @@ SearchFilesDialog.message.NotSelectedPath=You must select a search path
 SearchFilesDialog.message.ThePathNotExist=The path or file entered does not exist
 SearchFilesDialog.FileTypes=File Types
 SearchFilesDialog.SearchPath=Search Path
-SearchFilesDialog.message.seachSubdirsCheck=Search Subdirectories
+SearchFilesDialog.message.searchSubdirsCheck=Search Subdirectories
 SearchFilesDialog.message.EnterSearchText=You must enter search text
 SearchFilesDialog.message.EnterReplaceText=You must enter replacement text
 ApplicationLauncher.console-UsingJavaVersion=Using Java version 
@@ -1691,3 +1691,6 @@ QueryEditorResultsExporter.ErrorWritingToFile=Error writing to file:\n\n
 QueryEditorResultsExporter.Failed=failed
 QueryEditorResultsExporter.ExportingQueryResults=Exporting Query Results
 QueryEditorResultsExporter.ExportingResultSet=Exporting result set...
+
+
+CreateTableFunctionPanel.UseSQLSecurity=Use SQL Security?
