--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -517,7 +517,7 @@ preferences.restart-message=Настройки вступят в силу пос
 # -----------------------------------------------------
 AboutPanel.Copyright=Авторские права
 AboutPanel.Error_loading_license_panel_text=Ошибка загрузки панели текста лицензии
-AboutPanel.Fork_of_execute_query=Ветка выполняемого запроса
+AboutPanel.Fork_of_execute_query=форк проекта Execute Query
 AboutPanel.License=Лицензия
 AboutPanel.Resources=Используемые ресурсы
 AboutPanel.System=Система
