add English version of release notes

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1500,7 +1500,7 @@ QueryEditorToolBar.toggle-editor-output-command=Показать/скрыть п
 ReddatabaseAPI.Authorization=Авторизация
 ReddatabaseAPI.message=Для продолжения необходимо ввести логин и пароль\nдля входа на reddatabase.ru\nАвторизация необходима для отправки отчетов об ошибках\nи автоматического скачивания обновлений с сайта
 ReddatabaseAPI.unknown-password=Неизвестный логин или пароль. Попробуете снова?
-ReleaseNotesCommand.pathToNotes=org/executequery/release.notes.ru
+ReleaseNotesCommand.pathToNotes=org/executequery/release_ru.notes
 ReleaseNotesCommand.releaseNotes=Примечания к выпуску
 RestoreDefaultsCommand.restoreDefaults=Вернуть стандартные настройки
 ResultSetTablePopupMenu.CopySelectedCells-CommaSeparated=Копировать выделенные ячейки, разделенные запятыми
