fix the translation of the search and replacement window

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1139,9 +1139,9 @@ FindReplaceDialog.FindText=Поиск текста
 FindReplaceDialog.MatchCaseCheck=Учитывать регистр
 FindReplaceDialog.RegularExpressions=Регулярные выражения
 FindReplaceDialog.Replace=Заменить
-FindReplaceDialog.ReplaceAll=Замените Все
-FindReplaceDialog.SearchDown=Поиск Вниз
-FindReplaceDialog.SearchUp=Поиск Вверх
+FindReplaceDialog.ReplaceAll=Заменить все
+FindReplaceDialog.SearchDown=Поиск вниз
+FindReplaceDialog.SearchUp=Поиск вверх
 FindReplaceDialog.WholeWordsCheck=Только целые слова
 FindReplaceDialog.WrapCheck=Завершить поиск
 FindReplaceDialog.message=Текст замены должен отличаться от текста поиска.
